--- a/main.css
+++ b/main.css
@@ -1,1 +1,53 @@
 @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
+*{
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+}
+section{
+}
+.boxes{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+margin-top: 10rem;  
+margin-left: 20rem;  
+background-color:rebeccapurple ;
+}
+.box1, .box2, .box3{
+box-shadow: 0px 17px 50px rgba(0, 0, 0, 0.1);
+border-radius: 16px;
+text-align: center;
+height:40vh;
+width: 35vw;
+margin: 30px;
+justify-items: center;
+color: #370051;
+}
+.position{
+display: flex;
+float: right;
+margin-top: 15px;
+margin-right: 20px;
+font-size:15px;
+position: relative;
+ 
+}
+
+img#profile{
+    margin-top: 50px;
+    margin-left: 75px;
+}
+h2{
+    margin-top: 15px;
+}
+p{
+    margin-top: 10px;
+    font-weight: 400;
+}
+.points{
+    margin-top: 20px;
+    font-size: 20px;
+    color: #F39F55;
+}
